--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "set-handler": "aws lambda update-function-configuration --function-name %npm_package_name% --handler dst/index.handler",
     "deploy": "npm run build && npm run archive && aws lambda update-function-code --function-name %npm_package_name% --zip-file fileb://%npm_package_name%.zip"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "author": "nana4rider",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/nana4rider/alexa-skill-lambda-http-sensor.git"
+  }
 }
