--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,6 @@ indent_size = 2
 insert_final_newline = true
 indent_style = space
 trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
